# rustbgpd

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  benchmark_results.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  container.yml  fuzz.yml  release.yml
crates/api/: Cargo.toml  README.md  build.rs
crates/api/proto/: rustbgpd.proto
crates/api/src/: control_service.rs  global_service.rs  injection_service.rs  lib.rs  neighbor_service.rs  peer_group_service.rs  peer_types.rs  policy_helpers.rs  policy_service.rs  rib_service.rs  server.rs
crates/bmp/: Cargo.toml  README.md
crates/bmp/src/: client.rs  codec.rs  lib.rs  manager.rs  types.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/src/: connection.rs  error.rs  main.rs  output.rs  test_support.rs
crates/cli/src/commands/: control.rs  flowspec.rs  global.rs  mod.rs  neighbor.rs  rib.rs  watch.rs
crates/cli/src/tui/: app.rs  data.rs  mod.rs  theme.rs  ui.rs
crates/fsm/: Cargo.toml  README.md
crates/fsm/src/: action.rs  config.rs  error.rs  event.rs  lib.rs  negotiation.rs  session.rs  state.rs
crates/fsm/tests/: lifecycle.rs  proptest_fsm.rs
crates/mrt/: Cargo.toml  README.md
crates/mrt/src/: codec.rs  lib.rs  manager.rs  types.rs  writer.rs
crates/policy/: Cargo.toml  README.md
crates/policy/src/: engine.rs  lib.rs  prefix_list.rs
crates/policy/src/engine/tests/: as_path_length.rs  aspath_regex.rs  chain.rs  community.rs  large_community.rs  mod.rs  modifications.rs  peer_context.rs  prefix.rs  rpki.rs
crates/rib/: Cargo.toml  README.md
crates/rib/benches/: rib_ops.rs
crates/rib/src/: adj_rib_in.rs  adj_rib_out.rs  best_path.rs  event.rs  lib.rs  loc_rib.rs  manager.rs  route.rs  update.rs
crates/rib/src/manager/: distribution.rs  graceful_restart.rs  helpers.rs  mod.rs  peer_lifecycle.rs  route_refresh.rs  tests.rs
crates/rib/tests/: memory_profile.rs
crates/rpki/: Cargo.toml  README.md
crates/rpki/src/: aspa.rs  aspa_verify.rs  lib.rs  rtr_client.rs  rtr_codec.rs  vrp.rs  vrp_manager.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/src/: lib.rs  logging.rs  metrics.rs
crates/transport/: Cargo.toml  README.md
crates/transport/src/: config.rs  error.rs  framing.rs  handle.rs  lib.rs  listener.rs  session.rs  socket_opts.rs  timer.rs
crates/transport/src/session/: commands.rs  fsm.rs  inbound.rs  io.rs  mod.rs  outbound.rs  tests.rs
crates/transport/tests/: session_lifecycle.rs
crates/wire/: Cargo.toml  README.md
crates/wire/benches/: codec.rs
crates/wire/fuzz/: Cargo.toml
crates/wire/fuzz/fuzz_targets/: decode_flowspec.rs  decode_message.rs  decode_update.rs
crates/wire/src/: attribute.rs  capability.rs  constants.rs  error.rs  flowspec.rs  header.rs  keepalive.rs  lib.rs  message.rs  nlri.rs  notification.rs  notification_msg.rs  open.rs  route_refresh.rs  update.rs  validate.rs
crates/wire/tests/: proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
docs/: API.md  BENCHMARKS.md  COMPARISON.md  CONFIGURATION.md  DESIGN.md  INTEROP.md  OPERATIONS.md  RELEASE_CHECKLIST.md  RFC_NOTES.md  SECURITY.md  USE_CASES.md  gobgp-parity.md  milestones.md
docs/adr/: 0001-typed-raw-hybrid-path-attributes.md  0002-inherent-methods-not-traits-for-codec.md  0003-subcodes-as-constants-not-enums.md  0004-proptest-for-property-testing.md  0005-fsm-pure-state-machine.md  0006-validate-open-returns-notification.md  0007-explicit-prometheus-registry.md  0008-single-task-per-peer.md  0009-iterative-action-loop.md  0010-minimal-metrics-server.md  0011-unknown-notification-code-variant.md  0012-separate-decode-from-validation.md  0013-single-task-rib-manager.md  0014-best-path-standalone-function-deterministic-med.md  0015-adj-rib-out-inside-rib-manager.md  0016-socket2-for-md5-gtsm.md  0017-peer-manager-channel-based-ownership.md  0018-broadcast-channel-for-watch-routes.md  0019-inbound-tcp-listener.md  0020-global-control-services-coordinated-shutdown.md  0021-tcp-collision-detection.md  0022-grpc-server-supervision.md  0023-prefix-enum-afi-agnostic-rib.md  0024-graceful-restart.md  0025-extended-communities.md  0026-extended-community-policy.md  0027-route-refresh.md  0028-standard-community-policy.md  0029-route-reflector.md  0030-policy-actions.md  0031-large-communities.md  0032-extended-messages.md  0033-add-path.md  0034-rpki-origin-validation.md  0035-flowspec.md  0036-policy-chaining.md  0037-extended-nexthop.md  0038-enhanced-route-refresh.md  0039-transparent-route-server.md  0040-gr-restarting-speaker.md  (+10 more)
examples/completions/: _rustbgpctl  rustbgpctl.bash  rustbgpctl.fish
examples/ddos-mitigation/: config.toml
examples/docker-compose/: README.md  docker-compose.yml  frr.conf  rustbgpd.toml
examples/envoy-mtls/: README.md  envoy.yaml
examples/hosting-provider/: config.toml
examples/minimal/: config.toml
examples/route-collector/: config.toml
examples/route-server/: config.toml
examples/systemd/: rustbgpd.service
proto/: rustbgpd.proto
src/: config.rs  config_persister.rs  looking_glass.rs  main.rs  metrics_server.rs  peer_manager.rs  policy_admin.rs
src/config/: diagnostic.rs  mod.rs  parse.rs  schema.rs  tests.rs  validation.rs
tests/interop/: Dockerfile.bird  Dockerfile.gobgp  m0-bird.clab.yml  m0-frr.clab.yml  m1-frr.clab.yml  m10-frr-ipv6.clab.yml  m11-gr-frr.clab.yml  m12-ec-frr.clab.yml  m13-policy-frr.clab.yml  m14-rr-frr.clab.yml  m15-rr-frr.clab.yml  m16-llgr-frr.clab.yml  m17-addpath-frr.clab.yml  m18-extnexthop-frr.clab.yml  m19-routeserver-frr.clab.yml  m20-privateas-frr.clab.yml  m21-rpki-frr.clab.yml  m22-flowspec-frr.clab.yml  m23-gobgp.clab.yml  m24-bmp-frr.clab.yml  m25-md5-gtsm-frr.clab.yml  m26-cease-frr.clab.yml  m27-aspa-rtr2.clab.yml  m28-dynamic-frr.clab.yml  m3-frr.clab.yml  m4-frr.clab.yml
tests/interop/configs/: bird-m0.conf  frr-bgpd-m0.conf  frr-bgpd-m1.conf  (+68 more)
(+26 files in other folders)
