[workspace]
members = [
    "crates/wire",
    "crates/fsm",
    "crates/transport",
    "crates/rib",
    "crates/policy",
    "crates/api",
    "crates/telemetry",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lancerushing/rustbgpd"

[workspace.dependencies]
# Internal crates
rustbgpd-wire = { path = "crates/wire" }
rustbgpd-fsm = { path = "crates/fsm" }
rustbgpd-transport = { path = "crates/transport" }
rustbgpd-rib = { path = "crates/rib" }
rustbgpd-policy = { path = "crates/policy" }
rustbgpd-api = { path = "crates/api" }
rustbgpd-telemetry = { path = "crates/telemetry" }

# External dependencies — pinned across workspace
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prometheus = "0.13"
socket2 = { version = "0.5", features = ["all"] }
tokio-stream = { version = "0.1", features = ["sync"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[package]
name = "rustbgpd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustbgpd-wire.workspace = true
rustbgpd-fsm.workspace = true
rustbgpd-transport.workspace = true
rustbgpd-rib.workspace = true
rustbgpd-policy.workspace = true
rustbgpd-api.workspace = true
rustbgpd-telemetry.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
prometheus.workspace = true
thiserror.workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
