[workspace]
members = [
    "crates/wire",
    "crates/fsm",
    "crates/transport",
    "crates/rib",
    "crates/policy",
    "crates/api",
    "crates/telemetry",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lance0/rustbgpd"
keywords = ["bgp", "networking", "routing", "grpc"]
categories = ["network-programming"]

[workspace.dependencies]
# Internal crates
rustbgpd-wire = { path = "crates/wire", version = "0.3.0" }
rustbgpd-fsm = { path = "crates/fsm", version = "0.3.0" }
rustbgpd-transport = { path = "crates/transport", version = "0.3.0" }
rustbgpd-rib = { path = "crates/rib", version = "0.3.0" }
rustbgpd-policy = { path = "crates/policy", version = "0.3.0" }
rustbgpd-api = { path = "crates/api", version = "0.3.0" }
rustbgpd-telemetry = { path = "crates/telemetry", version = "0.3.0" }

# External dependencies — pinned across workspace
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prometheus = "0.13"
socket2 = { version = "0.5", features = ["all"] }
tokio-stream = { version = "0.1", features = ["sync"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[package]
name = "rustbgpd"
description = "API-first BGP daemon with gRPC control plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustbgpd-wire.workspace = true
rustbgpd-fsm.workspace = true
rustbgpd-transport.workspace = true
rustbgpd-rib.workspace = true
rustbgpd-policy.workspace = true
rustbgpd-api.workspace = true
rustbgpd-telemetry.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
prometheus.workspace = true
thiserror.workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
