[package]
publish = false
name = "rustbgpd-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "gRPC API server — tonic bindings for all five rustbgpd services"
readme = "README.md"

[dependencies]
rustbgpd-wire.workspace = true
rustbgpd-fsm.workspace = true
rustbgpd-rib.workspace = true
rustbgpd-policy.workspace = true
rustbgpd-transport.workspace = true
rustbgpd-telemetry.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
prometheus.workspace = true
bytes.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
