[package]
name = "rustbgpctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for rustbgpd — thin gRPC wrapper for daemon management"

[[bin]]
name = "rustbgpctl"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
