[package]
name = "rustbgpctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for rustbgpd — thin gRPC wrapper for daemon management"
readme = "README.md"

[[bin]]
name = "rustbgpctl"
path = "src/main.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
owo-colors.workspace = true
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-stream = { workspace = true, features = ["net"] }
rustbgpd-api.workspace = true
