[package]
name = "rustbgpd-fsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RFC 4271 BGP finite state machine — pure, no I/O, no async runtime"

[dependencies]
rustbgpd-wire.workspace = true
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
proptest = "1"
