[package]
publish = false
name = "rustbgpd-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Minimal policy engine — prefix allow/deny, max-prefix enforcement, attribute filters"
readme = "README.md"

[dependencies]
regex = "1"
rustbgpd-wire.workspace = true
thiserror.workspace = true

[dev-dependencies]
