[package]
name = "rustbgpd-rib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RIB data structures — Adj-RIB-In, Loc-RIB best-path selection, Adj-RIB-Out"

[dependencies]
rustbgpd-wire.workspace = true
rustbgpd-policy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

tokio-stream.workspace = true

[dev-dependencies]
proptest = "1"
