[package]
publish = false
name = "rustbgpd-rpki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RPKI origin validation — VRP table, RTR protocol client, cache management"
readme = "README.md"

[dependencies]
rustbgpd-wire.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
