[package]
publish = false
name = "rustbgpd-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Prometheus metrics and structured tracing for rustbgpd"
readme = "README.md"

[dependencies]
prometheus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[dev-dependencies]
