[package]
name = "rustbgpd-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BGP message codec — encode/decode OPEN, KEEPALIVE, UPDATE, NOTIFICATION, ROUTE-REFRESH"

[dependencies]
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
