[package]
name = "rustbgpd-wire-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"

[dependencies.rustbgpd-wire]
path = ".."

[[bin]]
name = "decode_message"
path = "fuzz_targets/decode_message.rs"
test = false
doc = false

[[bin]]
name = "decode_update"
path = "fuzz_targets/decode_update.rs"
test = false
doc = false

[workspace]
